--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@netlify/blobs": "^8.1.1",
         "blobshape": "^1.0.0",
         "bright": "^0.8.5",
-        "hud-sdk": "^1.5.3",
+        "hud-sdk": "^1.5.4",
         "markdown-to-jsx": "^7.4.5",
         "next": "15.1.7",
         "react": "18.3.1",
@@ -20,6 +20,8 @@
         "unique-names-generator": "^4.7.1"
     },
     "devDependencies": {
+        "@types/node": "22.14.1",
+        "@types/react": "19.1.2",
         "autoprefixer": "^10.4.18",
         "daisyui": "^4.12.8",
         "eslint": "8.57.1",
