--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@netlify/blobs": "^8.1.1",
         "blobshape": "^1.0.0",
         "bright": "^0.8.5",
-        "hud-sdk": "latest",
+        "hud-sdk": "^1.5.6",
         "markdown-to-jsx": "^7.4.5",
         "next": "15.1.7",
         "react": "18.3.1",
